docs: update link to image

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ aside {
   height: 170px;
   margin: 0 auto 40px;
   border-radius: 50%;
-  background-image: url(../assets/IMG_8253.jpg);
+  background-image: url(assets/IMG_8253.jpg);
   background-repeat: no-repeat;
   background-size: auto 230px;
 }
