--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'PT Sans', sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 body {
@@ -23,6 +25,7 @@ h4 {
 h1 {
   font-size: 44px;
   font-weight: 700;
+  color: #FFFFFF;
 }
 
 h2 {
@@ -44,44 +47,6 @@ h4 {
   margin-bottom: 3px;
 }
 
-.main-container {
-  display: flex;
-  max-width: 1000px;
-  width: calc(100vw - 120px);
-  margin: 50px auto;
-}
-
-aside {
-  position: relative;
-  width: 33%;
-  padding: 50px 60px;
-  color: #f8f9f9;
-  background-color: #34495E;
-}
-
-.photo {
-  position: relative;
-  overflow: hidden;
-  border-radius: 50%;
-  width: 170px;
-  height: 170px;
-  margin: 0 auto 40px;
-}
-
-.photo img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 170px;
-  height: 170px;
-  object-fit: cover;
-}
-
-.info {
-  margin-left: 40px;
-}
-
 ul {
   margin-bottom: 30px;
 }
@@ -97,83 +62,69 @@ li p {
   font-size: 16px;
 }
 
-.contacts {
-  margin-top: 15px;
-  font-weight: 700;
+a {
+  color: #000000;
+  text-decoration: none;
 }
 
-footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  padding-top: 15px;
-  padding-bottom: 10px;
-  background-color: #202e3b;
+.main-container {
+  display: grid;
+  grid-template-columns: 350px 1fr;
+  grid-template-rows: 250px auto;
+  max-width: 1000px;
+  width: calc(100vw - 120px);
+  margin: 50px auto;
 }
 
-footer div {
+.name {
   display: flex;
-  width: 30%;
-  margin-left: auto;
-  margin-right: auto;
+  align-items: flex-end;
+  padding: 20px 20px 50px 70px;
+  background-color: #343434;
 }
 
-a img {
-  height: 70%;
+.introduction {
+  display: flex;
+  align-items: flex-end;
+  padding: 20px 20px 50px 70px;
+  background-color: #DBDBDB;
 }
 
-main {
-  padding: 50px 60px;
-  width: 67%;
-  background-color: #F2F3F4;
+.introduction-content {
+  max-width: 500px;
 }
 
-.description {
-  margin-bottom: 50px;
-  padding-left: 20px;
-  border-left: #b8b8b8 solid 10px;
+.aside {
+  padding: 50px 40px 50px 70px;
+  background-color: #F6F6F6;
 }
 
-section {
-  margin-top: 20px;
-  margin-bottom: 40px;
+.contacts {
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.detail {
+  padding: 50px 40px 50px 70px;
+  background-color: #FFFFFF;
 }
 
 .detail-info {
-  display: flex;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .detail-info:last-child {
   margin-bottom: 0;
-}
+} 
 
-.detail-info__date {
-  width: 25%;
-}
-
-.detail-info__description {
-  width: 75%;
-}
-
-.detail-info__description h4 {
-  font-weight: 500;
-}
-
-.project {
-  display: grid;
-  grid-template-columns: 20% 30% 1fr;
-  gap: 15px;
-  margin-bottom: 15px;
+.detail-info p {
+  font-style: italic;
 }
 
 .project__name a {
-  color: #000000;
-  text-decoration: none;
-  font-weight: 500;
+  font-weight: 700;
 }
 
-.project__name a:hover {
-  color: #00946F;
+.project__technology {
+  font-style: italic;
 }
